kubernetes/apps/kube-system/cilium/gateway/external.sops.yaml
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.8.204
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: '*.aknuk.dev'
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: '*.aknuk.dev'
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: aknuk-dev-production-tls
sops:
  age:
    - recipient: age1hxqvf8yac5g5647gzsa95luvza94853l7mj7hle4u4933dyu3d3saxa80h
      enc: |
        -----BEGIN AGE ENCRYPTED FILE-----
        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBub2htcHpIWk82MkFLNmhB
[...]
        G3bsvwokPKjVSpWMvgARPnQf5S+MIDsYmCBGvEXSPrVHbCRlw9kp0Q==
        -----END AGE ENCRYPTED FILE-----
  lastmodified: "2025-05-27T08:37:18Z"
  mac: ENC[AES256_GCM,data:OV3D0PH8otgLxM39cG7Tcq6NcGjgj/HmXIKM8RsOb7ZaGqSCK7XvDUJlLlChsz/c8MhcnEToKZUS0CtjSNu1h0dLHA117s1s/kWQ/LaOVy/NDA2oKzMnRy3i70XZyfczERDMyMDghSbzhntnklEtepI8BQ86N/PIniQ/L6pOnIQ=,iv:R6l6SlT2BqUi0ri3dWVMU5fw/6FofNG0RmFWS7sUIX0=,tag:jplttKM4upqzvCwgWt6eIg==,type:str]
  encrypted_regex: ^(data|stringData)$
  mac_only_encrypted: true
  version: 3.10.2
