kubernetes/apps/kube-system/cilium/gateway/internal.sops.yaml
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  annotations:
    external-dns.alpha.kubernetes.io/target: internal.aknuk.dev
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.8.202
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: internal.aknuk.dev
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: '*.aknuk.dev'
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: '*.aknuk.dev'
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: aknuk-dev-production-tls
sops:
  age:
    - recipient: age1cg2mpusgf59fckt9j68saxexepahmkxktv0v2fs48dm76w6xkc6sla4xdx
      enc: |
        -----BEGIN AGE ENCRYPTED FILE-----
        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBmVXMycUtXMCtEVzljVS9z
[...]
        Hew0imIJJlJbNYNTELknpSocUoHguHWYy5Tw+sVtqpDB7PyHplngEg==
        -----END AGE ENCRYPTED FILE-----
  lastmodified: "2025-06-17T14:28:35Z"
  mac: ENC[AES256_GCM,data:c6Prk3GO4NJlA7V9YF2a/qSkPMy+B6VSidnffKEtH6nG1TBIuEDmO6Cgc1ffkg1tR7zA5JIrG+KHpCZMMHn5L1cTlFA9jTo79zkyd2cAmg2JinPEq7o4IdofG0ntduYOxKvcnV92Te1Rrlhc5LZIv9D3vpauZdd1rhjv26B1Keg=,iv:4RRYIoD7CqxBQ23izXEphApK3eChoXxY0JlZbaytmB8=,tag:ANU10l5wQRzs5m+2j8xR6A==,type:str]
  encrypted_regex: ^(data|stringData)$
  mac_only_encrypted: true
  version: 3.10.2
